--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 aiobotocore==2.23.0
 aiohappyeyeballs==2.6.1
-aiohttp==3.11.17
+aiohttp>3.11.17
 aiohttp-sse-client==0.2.1
 aioitertools==0.12.0
 aiosignal==1.3.2
