Modify Docker compose files and batching
Minor changes to docker compose file to use a prebuilt image for the local nomad server.

Another minor change to the submit_stac_batch.py script in "tools/" that gets rid of using a profile from .credentials in favor of just using environment AWS creds. This simplifies using the batching code in Parallel Works.

--- a/docker-compose-local.yml
+++ b/docker-compose-local.yml
@@ -51,8 +51,8 @@ services:
       - 8889:8889
 
   nomad-server:
-    build: ./local-nomad
     container_name: nomad-server
+    image: local-nomad-server:latest
     privileged: true
     volumes:
       # Docker socket access required for Nomad to manage Docker containers as a task driver
