--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -9,9 +9,7 @@ services:
       - ./inputs:/app/inputs # batch STAC item run lists go here
       - ./tools:/app/tools
       - ./data:/data # for output data when outputting data locally
-    environment:
-      - AWS_ACCESS_KEY_ID
-      - AWS_SECRET_ACCESS_KEY
-      - AWS_SESSION_TOKEN
+    env_file:
+      - .env
     entrypoint: [ sleep, infinity ]
     network_mode: host
